setup: Renamed SessionSettings to SessionSettingsBean