@@ -1,9 +1,8 @@
 package fr.siamois.bean.field;
 
 import fr.siamois.bean.LangBean;
-import fr.siamois.bean.SessionSettings;
+import fr.siamois.bean.SessionSettingsBean;
 import fr.siamois.models.spatialunit.SpatialUnit;
-import fr.siamois.bean.converter.ConceptConverter;
 import fr.siamois.models.exceptions.NoConfigForField;
 import fr.siamois.models.exceptions.SpatialUnitAlreadyExistsException;
 import fr.siamois.models.vocabulary.Concept;
@@ -21,7 +20,6 @@ import javax.faces.bean.SessionScoped;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * <p>This bean handles the creation of new Spatial Unit</p>
@@ -38,10 +36,10 @@ public class SpatialUnitFieldBean implements Serializable {
     // Injections
     private final transient FieldService fieldService;
     private final LangBean langBean;
-    private final SessionSettings sessionSettings;
-    private final SpatialUnitService spatialUnitService;
-    private final ConceptService conceptService;
-    private final FieldConfigurationService fieldConfigurationService;
+    private final SessionSettingsBean sessionSettingsBean;
+    private final transient SpatialUnitService spatialUnitService;
+    private final transient ConceptService conceptService;
+    private final transient FieldConfigurationService fieldConfigurationService;
 
     // Storage
     private List<SpatialUnit> refSpatialUnits = new ArrayList<>();
@@ -56,13 +54,13 @@ public class SpatialUnitFieldBean implements Serializable {
 
     public SpatialUnitFieldBean(FieldService fieldService,
                                 LangBean langBean,
-                                SessionSettings sessionSettings,
+                                SessionSettingsBean sessionSettingsBean,
                                 SpatialUnitService spatialUnitService,
                                 ConceptService conceptService,
                                 FieldConfigurationService fieldConfigurationService) {
         this.fieldService = fieldService;
         this.langBean = langBean;
-        this.sessionSettings = sessionSettings;
+        this.sessionSettingsBean = sessionSettingsBean;
         this.spatialUnitService = spatialUnitService;
         this.conceptService = conceptService;
         this.fieldConfigurationService = fieldConfigurationService;
@@ -74,10 +72,10 @@ public class SpatialUnitFieldBean implements Serializable {
      */
     public void init() {
         init(new ArrayList<>(),new ArrayList<>());
-        refSpatialUnits = spatialUnitService.findAllOfInstitution(sessionSettings.getSelectedInstitution());
+        refSpatialUnits = spatialUnitService.findAllOfInstitution(sessionSettingsBean.getSelectedInstitution());
         labels = refSpatialUnits.stream()
                 .map(SpatialUnit::getName)
-                .collect(Collectors.toList());
+                .toList();
         concepts = null;
         selectedConcept = null;
         fName = "";
@@ -85,10 +83,10 @@ public class SpatialUnitFieldBean implements Serializable {
     }
 
     public void init(List<SpatialUnit> parents, List<SpatialUnit> children) {
-        refSpatialUnits = spatialUnitService.findAllOfInstitution(sessionSettings.getSelectedInstitution());
+        refSpatialUnits = spatialUnitService.findAllOfInstitution(sessionSettingsBean.getSelectedInstitution());
         labels = refSpatialUnits.stream()
                 .map(SpatialUnit::getName)
-                .collect(Collectors.toList());
+                .toList();
         concepts = null;
         selectedConcept = null;
         fName = "";
@@ -105,7 +103,7 @@ public class SpatialUnitFieldBean implements Serializable {
     public String save() {
 
         try {
-            SpatialUnit saved = spatialUnitService.save(sessionSettings.getUserInfo(), fName, selectedConcept, fParentsSpatialUnits);
+            SpatialUnit saved = spatialUnitService.save(sessionSettingsBean.getUserInfo(), fName, selectedConcept, fParentsSpatialUnits);
 
             MessageUtils.displayInfoMessage(langBean, "spatialunit.created", saved.getName());
 
@@ -124,7 +122,7 @@ public class SpatialUnitFieldBean implements Serializable {
      */
     public List<Concept> completeCategory(String input) {
         try {
-            return fieldConfigurationService.fetchAutocomplete(sessionSettings.getUserInfo(), SpatialUnit.CATEGORY_FIELD_CODE, input);
+            return fieldConfigurationService.fetchAutocomplete(sessionSettingsBean.getUserInfo(), SpatialUnit.CATEGORY_FIELD_CODE, input);
         } catch (NoConfigForField e) {
             log.error(e.getMessage(), e);
             return new ArrayList<>();
